[gd_scene load_steps=10 format=2]

[ext_resource path="res://GlobalTheme.tres" type="Theme" id=1]
[ext_resource path="res://Fonts/Titillium-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/MainMenu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://UI/MainMenu/LoadGameScreen.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.207843, 0.133333, 0.364706, 1 )
corner_radius_top_right = 16
corner_radius_bottom_right = 16

[sub_resource type="DynamicFont" id=3]
size = 38
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.364706, 0.133333, 0.329412, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.364706, 0.133333, 0.329412, 1 )
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.207843, 0.133333, 0.364706, 1 )
corner_radius_top_left = 16
corner_radius_bottom_left = 16

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="HBoxContainer"]
margin_right = 260.0
margin_bottom = 720.0
rect_min_size = Vector2( 260, 0 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel2/MarginContainer"]
margin_right = 236.0
margin_bottom = 696.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
margin_right = 236.0
margin_bottom = 696.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
visible = false
margin_top = 640.0
margin_right = 236.0
margin_bottom = 666.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 116.0
margin_bottom = 26.0
hint_tooltip = "Save the game"
size_flags_horizontal = 3
text = "Quick save"

[node name="LoadButton" type="Button" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 120.0
margin_right = 236.0
margin_bottom = 26.0
hint_tooltip = "Load the saved game"
size_flags_horizontal = 3
text = "Quick load"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer"]
visible = false
margin_top = 670.0
margin_right = 236.0
margin_bottom = 696.0

[node name="PrevPageButton" type="Button" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 116.0
margin_bottom = 26.0
hint_tooltip = "Flip to the previous page of options"
size_flags_horizontal = 3
disabled = true
text = "<- Page"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextPageButton" type="Button" parent="HBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 120.0
margin_right = 236.0
margin_bottom = 26.0
hint_tooltip = "Flip to the next page of options"
size_flags_horizontal = 3
disabled = true
text = "Page ->"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="HBoxContainer"]
margin_left = 264.0
margin_right = 269.0
margin_bottom = 720.0
rect_min_size = Vector2( 5, 0 )

[node name="MainVBox" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 273.0
margin_right = 1027.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/MainVBox"]
margin_right = 754.0
margin_bottom = 616.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MainVBox/ScrollContainer"]
margin_right = 754.0
margin_bottom = 616.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MainVBox/ScrollContainer/VBoxContainer"]
margin_right = 754.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )

[node name="Label" type="Label" parent="HBoxContainer/MainVBox/ScrollContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 754.0
margin_bottom = 199.0
custom_fonts/font = SubResource( 3 )
text = "Broken Dreams Correctional Center"
align = 1
autowrap = true

[node name="Label3" type="RichTextLabel" parent="HBoxContainer/MainVBox/ScrollContainer/VBoxContainer"]
margin_top = 209.0
margin_right = 754.0
margin_bottom = 230.0
bbcode_enabled = true
bbcode_text = "[center]An erotic text-based rpg about being a prisoner in a space prison.[/center]"
text = "An erotic text-based rpg about being a prisoner in a space prison."
fit_content_height = true

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/MainVBox/ScrollContainer/VBoxContainer"]
margin_top = 240.0
margin_right = 754.0
margin_bottom = 309.0
rect_min_size = Vector2( 0, 69 )

[node name="Panel" type="PanelContainer" parent="HBoxContainer/MainVBox/ScrollContainer/VBoxContainer"]
margin_top = 319.0
margin_right = 754.0
margin_bottom = 417.0
custom_styles/panel = SubResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MainVBox/ScrollContainer/VBoxContainer/Panel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 750.0
margin_bottom = 94.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="RichTextLabel" parent="HBoxContainer/MainVBox/ScrollContainer/VBoxContainer/Panel/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 726.0
margin_bottom = 70.0
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "This game contains a lot of adult themes including sexual and fetish content and is meant to be played by adults only"
text = "This game contains a lot of adult themes including sexual and fetish content and is meant to be played by adults only"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersionLabel" type="Label" parent="HBoxContainer/MainVBox/ScrollContainer/VBoxContainer"]
margin_top = 427.0
margin_right = 754.0
margin_bottom = 447.0
text = "Version number here"
align = 2

[node name="Label2" type="RichTextLabel" parent="HBoxContainer/MainVBox/ScrollContainer/VBoxContainer"]
margin_top = 457.0
margin_right = 754.0
margin_bottom = 478.0
bbcode_enabled = true
bbcode_text = "[right]Created by Rahi[/right]"
text = "Created by Rahi"
fit_content_height = true

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/MainVBox"]
margin_top = 620.0
margin_right = 754.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 100 )
columns = 5

[node name="ResumeButton" type="Button" parent="HBoxContainer/MainVBox/GridContainer"]
margin_right = 147.0
margin_bottom = 26.0
hint_tooltip = "Load the latest save and continue playing"
size_flags_horizontal = 3
disabled = true
text = "Resume"

[node name="NewGameButton" type="Button" parent="HBoxContainer/MainVBox/GridContainer"]
margin_left = 151.0
margin_right = 298.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "New game"

[node name="LoadGameButton" type="Button" parent="HBoxContainer/MainVBox/GridContainer"]
margin_left = 302.0
margin_right = 449.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Load game"

[node name="Button5" type="Button" parent="HBoxContainer/MainVBox/GridContainer"]
margin_left = 453.0
margin_right = 600.0
margin_bottom = 26.0
size_flags_horizontal = 3
disabled = true
text = "Options"

[node name="Button4" type="Button" parent="HBoxContainer/MainVBox/GridContainer"]
margin_left = 604.0
margin_right = 751.0
margin_bottom = 26.0
size_flags_horizontal = 3
disabled = true
text = "Credits"

[node name="LoadGameScreen" parent="HBoxContainer" instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 730.0
margin_right = 1027.0
margin_bottom = 720.0

[node name="HSplitContainer2" type="HSplitContainer" parent="HBoxContainer"]
margin_left = 1031.0
margin_right = 1036.0
margin_bottom = 720.0
rect_min_size = Vector2( 5, 0 )

[node name="Panel" type="Panel" parent="HBoxContainer"]
margin_left = 1040.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 240, 0 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HBoxContainer/MainVBox/GridContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="HBoxContainer/MainVBox/GridContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="HBoxContainer/MainVBox/GridContainer/LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="onClosePressed" from="HBoxContainer/LoadGameScreen" to="." method="_on_LoadGameScreen_onClosePressed"]
